major cleanup: -removed unused resources (mostly old icons) -renamings -rearranged dialog buttons according to guidelines (dismiss on left)