@@ -1014,7 +1014,7 @@ public class TweetsContentProvider extends ContentProvider {
 				
 				Intent i = new Intent(TwitterService.SYNCH_ACTION);
 				i.putExtra("synch_request", TwitterService.SYNCH_TWEET);
-				i.putExtra("rowId", new Long(uri.getLastPathSegment()));
+				i.putExtra("rowId", Long.valueOf(uri.getLastPathSegment()));
 				getContext().startService(i);
 			}
 
